--- a/recipeswiper-frontend/recipeswiper-frontend/vercel.json
+++ b/recipeswiper-frontend/recipeswiper-frontend/vercel.json
@@ -1,6 +1,6 @@
 {
-  "buildCommand": "ng build --configuration production",
-  "outputDirectory": "dist/recipeswiper-frontend",
+  "buildCommand": "npm run build",
+  "outputDirectory": "./dist/recipeswiper-frontend/browser",
   "routes": [
     {
       "src": "/(.*)",
