--Added vercel.json

--- a/recipeswiper-frontend/recipeswiper-frontend/vercel.json
+++ b/recipeswiper-frontend/recipeswiper-frontend/vercel.json
@@ -3,6 +3,30 @@
   "outputDirectory": "./dist/recipeswiper-frontend/browser",
   "routes": [
     {
+      "src": "/assets/(.*)",
+      "dest": "/assets/$1"
+    },
+    {
+      "src": "/(.*\\.js)",
+      "dest": "/$1"
+    },
+    {
+      "src": "/(.*\\.css)",
+      "dest": "/$1"
+    },
+    {
+      "src": "/(.*\\.ico)",
+      "dest": "/$1"
+    },
+    {
+      "src": "/(.*\\.png|.*\\.jpg|.*\\.jpeg|.*\\.gif|.*\\.svg)",
+      "dest": "/$1"
+    },
+    {
+      "src": "/(.*\\.woff|.*\\.woff2|.*\\.ttf|.*\\.eot)",
+      "dest": "/$1"
+    },
+    {
       "src": "/(.*)",
       "dest": "/index.html"
     }
