--- a/recipeswiper-backend/Dockerfile
+++ b/recipeswiper-backend/Dockerfile
@@ -1,6 +1,12 @@
 FROM icr.io/appcafe/open-liberty:kernel-slim-java21-openj9-ubi-minimal
 
-# Copy application files
+# Copy Liberty server configuration first
+COPY --chown=1001:0 src/main/liberty/config/server.xml /config/
+
+# Install the required features based on server.xml
+RUN features.sh
+
+# Copy rest of application files and build
 COPY --chown=1001:0 src/ /config/
 COPY --chown=1001:0 pom.xml /config/
 
@@ -24,6 +30,9 @@ RUN echo "-Xmx256m" >> /config/jvm.options && \
     echo "-Xms128m" >> /config/jvm.options && \
     echo "-Xtune:virtualized" >> /config/jvm.options && \
     echo "-XX:+UseContainerSupport" >> /config/jvm.options
+
+# Run configure script to optimize runtime
+RUN configure.sh
 
 # Set default PORT if not provided (Render default is 10000)
 ENV PORT=10000
