--- a/.github/workflows/buildDockerImage.yml
+++ b/.github/workflows/buildDockerImage.yml
@@ -2,7 +2,7 @@ name: Create and publish Docker Compose images
 
 on:
   push:
-    branches: [ 'release' ]
+    branches: [ 'main' ]
 
 env:
   REGISTRY: ghcr.io
