--- a/recipeswiper-frontend/recipeswiper-frontend/Dockerfile
+++ b/recipeswiper-frontend/recipeswiper-frontend/Dockerfile
@@ -1,7 +1,10 @@
 # Build stage
-FROM node:18 AS builder
+FROM node:18-alpine AS builder
 
 WORKDIR /app
+
+# Install required packages for node-gyp and compilation
+RUN apk add --no-cache python3 make g++
 
 # Copy package files first for better caching
 COPY package*.json ./
@@ -9,13 +12,16 @@ COPY tsconfig*.json ./
 COPY angular.json ./
 COPY tailwind.config.js ./
 
-RUN npm ci
+# Install dependencies - robust approach for CI/CD
+RUN npm install --frozen-lockfile --no-audit --no-fund || \
+    npm install --no-audit --no-fund
 
 # Copy source code
 COPY src/ ./src/
 COPY public/ ./public/
 
-# Nutze npm, damit ng über ./node_modules/.bin/ng ausgeführt wird
+# Build with proper memory limits for GitHub Actions
+ENV NODE_OPTIONS="--max-old-space-size=4096"
 RUN npm run build -- --configuration production
 
 # Serve stage
