--- a/recipeswiper-frontend/recipeswiper-frontend/tsconfig.app.json
+++ b/recipeswiper-frontend/recipeswiper-frontend/tsconfig.app.json
@@ -4,7 +4,13 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/app",
-    "types": []
+    "types": [],
+    "paths": {
+      "@app/*": ["app/*"],
+      "@core/*": ["app/core/*"],
+      "@shared/*": ["app/shared/*"],
+      "@features/*": ["app/features/*"]
+    }
   },
   "files": [
     "src/main.ts"
