--- a/recipeswiper-frontend/recipeswiper-frontend/tsconfig.app.json
+++ b/recipeswiper-frontend/recipeswiper-frontend/tsconfig.app.json
@@ -4,13 +4,7 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/app",
-    "types": [],
-    "paths": {
-      "@app/*": ["app/*"],
-      "@core/*": ["app/core/*"],
-      "@shared/*": ["app/shared/*"],
-      "@features/*": ["app/features/*"]
-    }
+    "types": []
   },
   "files": [
     "src/main.ts"
