--- a/recipeswiper-backend/Dockerfile
+++ b/recipeswiper-backend/Dockerfile
@@ -6,6 +6,8 @@ COPY --chown=1001:0 libs/mariadb-java-client-3.5.2.jar /config/resources/
 
 RUN features.sh
 
+RUN mvn clean install
+
 COPY --chown=1001:0 target/*.war /config/apps
 
 RUN configure.sh
