--- a/recipeswiper-backend/Dockerfile
+++ b/recipeswiper-backend/Dockerfile
@@ -1,5 +1,7 @@
 FROM icr.io/appcafe/open-liberty:kernel-slim-java21-openj9-ubi-minimal
 
+RUN ls -R / && echo "---" && ls -R .
+
 COPY --chown=1001:0 src/main/liberty/config/ /config/
 
 COPY --chown=1001:0 libs/mariadb-java-client-3.5.2.jar /config/resources/
