--- a/recipeswiper-backend/Dockerfile
+++ b/recipeswiper-backend/Dockerfile
@@ -6,6 +6,6 @@ COPY --chown=1001:0 libs/mariadb-java-client-3.5.2.jar /config/resources/
 
 RUN features.sh
 
-COPY --chown=1001:0 config/target/*.war /config/apps
+COPY --chown=1001:0 recipeswiper-backend/target/*.war /config/apps
 
 RUN configure.sh
