--- a/.github/workflows/buildDockerImage.yml
+++ b/.github/workflows/buildDockerImage.yml
@@ -11,39 +11,48 @@ env:
 jobs:
   build-and-push-image:
     runs-on: ubuntu-latest
+  x§x§
+permissions:
+  contents: read
+  packages: write
+  attestations: write
+  id-token: write
 
-    permissions:
-      contents: read
-      packages: write
-      attestations: write
-      id-token: write
+steps:
+  - name: Zeige Dateien im Build-Kontext
+  - run: |
+  - echo "🗂️ Dateien im Root-Verzeichnis:"
+  - ls -la
+  - echo "📁 Dateien im backend-Verzeichnis:"
+  - ls -la backend/
+  - echo "📁 Dateien im backend/target-Verzeichnis:"
+  - ls -la backend/target || echo "❌ backend/target existiert nicht"
 
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+  - name: Checkout repository
+    uses: actions/checkout@v4
 
-      - name: Log in to the Container registry
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+  - name: Log in to the Container registry
+    uses: docker/login-action@v3
+    with:
+      registry: ${{ env.REGISTRY }}
+      username: ${{ github.actor }}
+      password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+  - name: Set up Docker Buildx
+    uses: docker/setup-buildx-action@v3
 
-      - name: Build and push images from docker-compose.yml
-        id: bake
-        uses: docker/bake-action@v4
-        with:
-          files: docker-compose.yml
-          push: true
-          set: |
-            *.tags=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+  - name: Build and push images from docker-compose.yml
+    id: bake
+    uses: docker/bake-action@v4
+    with:
+      files: docker-compose.yml
+      push: true
+      set: |
+        *.tags=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
 
-      - name: Generate artifact attestation
-        uses: actions/attest-build-provenance@v2
-        with:
-          subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-          subject-digest: ${{ steps.bake.outputs.digest }}
-          push-to-registry: true
+  - name: Generate artifact attestation
+    uses: actions/attest-build-provenance@v2
+    with:
+      subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+      subject-digest: ${{ steps.bake.outputs.digest }}
+      push-to-registry: true
