--- a/recipeswiper-frontend/recipeswiper-frontend/Dockerfile
+++ b/recipeswiper-frontend/recipeswiper-frontend/Dockerfile
@@ -8,6 +8,8 @@ RUN npm install
 
 COPY . .
 
+RUN echo "📂 Verzeichnisstruktur:" && find . -type f | sort
+
 RUN npm run build --prod
 
 # Serve Stage
