--- a/.github/workflows/buildDockerImage.yml
+++ b/.github/workflows/buildDockerImage.yml
@@ -28,10 +28,10 @@ jobs:
           distribution: 'temurin'
           java-version: '21'
 
-      - name: Build WAR file
+      - name: Build backend WAR file
         run: mvn clean package --file recipeswiper-backend/pom.xml
 
-      - name: Log in to the Container registry
+      - name: Log in to GHCR
         uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
@@ -39,7 +39,6 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Set up Docker Buildx
-
         uses: docker/setup-buildx-action@v3
 
       - name: Build and push all images
@@ -52,35 +51,27 @@ jobs:
             backend.tags=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-backend:latest
             frontend.tags=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-frontend:latest
 
-      - name: Dump Bake outputs
-        run: |
-          echo "All outputs:"
-          echo "${{ toJson(steps.bake.outputs) }}"
-
       - name: Extract image digests from Bake metadata
         id: extract-digests
         run: |
-          BACKEND_DIGEST=$(jq -r '.["backend"]["containerimage.digest"]' ${{ steps.bake.outputs.metadata-file }})
-          FRONTEND_DIGEST=$(jq -r '.["frontend"]["containerimage.digest"]' ${{ steps.bake.outputs.metadata-file }})
-          echo "backend_digest=$BACKEND_DIGEST" >> "$GITHUB_OUTPUT"
-          echo "frontend_digest=$FRONTEND_DIGEST" >> "$GITHUB_OUTPUT"
+          cat "${{ steps.bake.outputs.metadata-file }}"
+          
+          BACKEND_DIGEST=$(jq -r '.backend["containerimage.digest"]' "${{ steps.bake.outputs.metadata-file }}")
+          FRONTEND_DIGEST=$(jq -r '.frontend["containerimage.digest"]' "${{ steps.bake.outputs.metadata-file }}")
 
-
-      - name: Output image digests
-        run: |
-          echo "Backend image digest: ${{ steps.bake.outputs.backend.digest }}"
-          echo "Frontend image digest: ${{ steps.bake.outputs.frontend.digest }}"
+          echo "backend_digest=$BACKEND_DIGEST" >> $GITHUB_OUTPUT
+          echo "frontend_digest=$FRONTEND_DIGEST" >> $GITHUB_OUTPUT
 
       - name: Attest backend image
         uses: actions/attest-build-provenance@v2
         with:
           subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-backend
           subject-digest: ${{ steps.extract-digests.outputs.backend_digest }}
-          push-to-registry: 'true'
+          push-to-registry: true
 
       - name: Attest frontend image
         uses: actions/attest-build-provenance@v2
         with:
           subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-frontend
           subject-digest: ${{ steps.extract-digests.outputs.frontend_digest }}
-          push-to-registry: 'true'
+          push-to-registry: true
