--- a/.github/workflows/buildDockerImage.yml
+++ b/.github/workflows/buildDockerImage.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Build and push all images
+      - name: Build and push all images #todo Use single DockerFiles for backend and frontend
         id: bake
         uses: docker/bake-action@v4
         with:
