--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,6 @@
 services:
   db:
     image: mariadb:10.6
-    restart: always
     environment:
       MARIADB_ROOT_PASSWORD: root123
       MARIADB_DATABASE: recipeswiper
@@ -10,34 +9,28 @@ services:
     volumes:
       - db_data:/var/lib/mysql
       - ./recipeswiper-database:/docker-entrypoint-initdb.d
-    healthcheck:
-      test: [ "CMD", "mysqladmin", "ping", "-h", "localhost" ]
-      interval: 10s
-      timeout: 5s
-      retries: 5
     ports:
       - "3306:3306"
 
   backend:
-    build: ./recipeswiper-backend
-    depends_on:
-      db:
-        condition: service_healthy
-    ports:
-      - "9080:9080"
+    image: ghcr.io/janishuber/recipeswiper-backend:latest
     environment:
       DB_HOST: db
       DB_PORT: 3306
-      DB_NAME: ${DB_NAME}
-      DB_USER: ${DB_USER}
-      DB_PASSWORD: ${DB_PASSWORD}
+      DB_NAME: recipeswiper
+      DB_USER: recipeuser
+      DB_PASSWORD: recipe123
+    ports:
+      - "9080:9080"
+    depends_on:
+      - db
 
   frontend:
-    build: ./recipeswiper-frontend
-    depends_on:
-      - backend
+    image: ghcr.io/janishuber/recipeswiper-frontend:latest
     ports:
       - "4200:80"
+    depends_on:
+      - backend
 
 volumes:
   db_data:
