--- a/.github/workflows/buildDockerImage.yml
+++ b/.github/workflows/buildDockerImage.yml
@@ -41,37 +41,33 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Build and push all images #todo Use single DockerFiles for backend and frontend
-        id: bake
-        uses: docker/bake-action@v4
-        with:
-          files: docker-compose.yml
-          push: true
-          set: |
-            backend.tags=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-backend:latest
-            frontend.tags=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-frontend:latest
-
-      - name: Extract image digests from Bake metadata
-        id: extract-digests
+      - name: Build and push backend image
+        id: backend
         run: |
-          echo '${{ steps.bake.outputs.metadata }}' > metadata.json
-          
-          BACKEND_DIGEST=$(jq -r '.backend["containerimage.digest"]' metadata.json)
-          FRONTEND_DIGEST=$(jq -r '.frontend["containerimage.digest"]' metadata.json)
-          
-          echo "backend_digest=$BACKEND_DIGEST" >> $GITHUB_OUTPUT
-          echo "frontend_digest=$FRONTEND_DIGEST" >> $GITHUB_OUTPUT      
+          docker build -t ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-backend:latest ./recipeswiper-backend
+          docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-backend:latest | tee push_output.txt
+          DIGEST=$(grep -o 'sha256:[a-f0-9]\{64\}' push_output.txt | tail -n1)
+          echo "digest=$DIGEST" >> "$GITHUB_OUTPUT"
+
+      - name: Build and push frontend image
+        id: frontend
+        run: |
+          docker build -t ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-frontend:latest ./recipeswiper-frontend
+          docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-frontend:latest | tee push_output.txt
+          DIGEST=$(grep -o 'sha256:[a-f0-9]\{64\}' push_output.txt | tail -n1)
+          echo "digest=$DIGEST" >> "$GITHUB_OUTPUT"
+
 
       - name: Attest backend image
         uses: actions/attest-build-provenance@v2
         with:
           subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-backend
-          subject-digest: ${{ steps.extract-digests.outputs.backend_digest }}
+          subject-digest: ${{ steps.backend.outputs.digest }}
           push-to-registry: true
 
       - name: Attest frontend image
         uses: actions/attest-build-provenance@v2
         with:
           subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-frontend
-          subject-digest: ${{ steps.extract-digests.outputs.frontend_digest }}
+          subject-digest: ${{ steps.frontend.outputs.digest }}
           push-to-registry: true
